--- a/songs/song.css
+++ b/songs/song.css
@@ -48,8 +48,14 @@
 	align-self: stretch;
 }
 
-.song__artist,
-.song__charter {
+.song__text,
+.song__text:visited {
+	color: inherit;
+	text-decoration: none;
+}
+
+.song__text--artist,
+.song__text--charter {
 	color: var(--color-text-muted);
 	font-size: 0.7em;
 	margin-bottom: 1px;
@@ -57,7 +63,7 @@
 	margin-left: 8px;
 }
 
-.song__charter {
+.song__text--charter {
 	margin-left: auto;
 }
 
