--- a/songs/song.css
+++ b/songs/song.css
@@ -112,40 +112,24 @@
 	align-items: flex-end;
 	justify-content: end;
 	flex-grow: 1;
-	margin-right: 4px;
-	margin-bottom: 4px;
 }
 
 .song-difficulty {
 	width: 50px;
 	height: 50px;
 	background: var(--color-background-secondary);
-	margin-left: 16px;
+	margin-left: 5px;
 	border-radius: 50%;
-	outline: 2px solid var(--color-difficulty);
-	outline-offset: 2px;
-	overflow: hidden;
 	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
-
-.song-difficulty__background {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	background: var(--color-difficulty);
-	transform-origin: bottom;
-}
-
 
 .song-difficulty__icon {
 	width: 100%;
 	height: 100%;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 	position: absolute;
-	background-size: contain;
-	background-position: center;
-	color: var(--color-difficulty);
-	transform: scale(75%);
+	padding: 5px;
 }
